--- a/index.html
+++ b/index.html
@@ -13,10 +13,38 @@
         crossorigin="anonymous"></script>
     <script>
         $(document).ready(function () {
-            fetch("http://spartacodingclub.shop/sparta_api/weather/seoul").then(res => res.json()).then(data => {
-                let temp = data["temp"]
-                $('#temp').text(temp)
-            })
+            fetch("http://spartacodingclub.shop/sparta_api/weather/seoul")
+                .then(res => res.json())
+                .then(data => {
+                    let temp = data["temp"]
+                    $('#temp').text(temp)
+                })
+        })
+        $(document).ready(function () {
+            fetch("http://spartacodingclub.shop/web/api/movie")
+                .then(res_movie => res_movie.json())
+                .then(movies => {
+                    // console.log(movies)
+                    let rows = movies["movies"]
+                    rows.forEach((i) => {
+                        let stars = "⭐".repeat(i["star"])
+                        let movie_html =
+                            `<div class="col">
+                                <div class="card h-100">
+                                    <img src="${i["image"]}"
+                                        class="card-img-top" alt="..." />
+                                    <div class="card-body">
+                                        <h5 class="card-title">${i["title"]}</h5>
+                                        <p class="card-text">${i["desc"]}</p>
+                                        <p>${stars}</p>
+                                        <p class="mycomment">${i["comment"]}</p>
+                                    </div>
+                                </div>
+                            </div>`
+                        $('#cards').append(movie_html)
+                    })
+
+                })
         })
     </script>
 
@@ -114,11 +142,11 @@
             <label class="input-group-text" for="inputGroupSelect01">별점</label>
             <select class="form-select" id="inputGroupSelect01">
                 <option selected>-- 선택하기 --</option>
-                <option value="1">★</option>
-                <option value="2">★★</option>
-                <option value="3">★★★</option>
-                <option value="2">★★★★</option>
-                <option value="3">★★★★★</option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
+                <option value="2">⭐⭐⭐⭐</option>
+                <option value="3">⭐⭐⭐⭐⭐</option>
             </select>
         </div>
         <div class="form-floating">
@@ -132,56 +160,7 @@
         </div>
     </div>
     <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body">
-                        <h5 class="card-title">영화 제목이 들어갑니다</h5>
-                        <p class="card-text">여기에 영화에 대한 설명이 들어갑니다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">나의 한줄 평을 씁니다</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="row row-cols-1 row-cols-md-4 g-4" id="cards"></div>
     </div>
 </body>
 
